--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -7,6 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "express": "^4.14.0",
     "react": "15.4.1",
     "react-native": "0.39.2",
     "react-native-swiper": "^1.5.4"
