--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "express": "^4.14.0",
+    "firebase": "^3.6.4",
     "react": "15.4.1",
     "react-native": "0.39.2",
     "react-native-swiper": "^1.5.4"
