--- a/reactApp/package.json
+++ b/reactApp/package.json
@@ -12,7 +12,9 @@
     "firebase": "^3.6.4",
     "react": "15.4.1",
     "react-native": "0.39.2",
-    "react-native-swiper": "^1.5.4"
+    "react-native-swiper": "^1.5.4",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
